[tool.poetry]
name = "aiagents"
version = "0.1.0"
description = ""
authors = ["paritoshk <pck2123@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
